[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ImmunoPheno"
version = "0.1.0"
description = "My package description"
license = {text = "MIT"}
authors = [
	{name="Pablo Cámara", email='pcamara@pennmedicine.upenn.edu'},
	]
readme = "README.md"
dependencies = [
	"matplotlib==3.7.1",
    "seaborn==0.12.2",
    "numpy==1.22.4",
    "scipy==1.10.1",
    "statsmodels==0.13.5",
    "pandas==1.4.4",
    "umap-learn==0.5.3",
    "plotly==5.13.1",
    "pytest-cov==4.0.0",
    "pytest-mock==3.10.0",
    "multiprocess==0.70.15",
    "anndata==0.10.0",
    "tqdm"
	]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"immunopheno.data" = ["hpca_genes.txt"]